--- a/easy.html
+++ b/easy.html
@@ -2,16 +2,16 @@
 
 <head>
     <title>Wordle - Intermediate</title>
-    <link rel="stylesheet" href="css/intermediate.css">
+    <link rel="stylesheet" href="css/easy.css">
 </head>
 
 <body>
     <div id="title">
-        <h1>WORDLE - INERTMEDIATE</h1>
+        <h1>WORDLE - EASY</h1>
     </div>
     <div id="game">
         <div class="grid">
         </div>
     </div>
-    <script src="js/intermediate.js"></script>
+    <script src="js/easy.js"></script>
 </body>
