--- a/easy.html
+++ b/easy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Wordle - Intermediate</title>
+    <title>Wordle - Easy</title>
     <link rel="stylesheet" href="css/easy.css">
 </head>
 
@@ -13,5 +13,12 @@
         <div class="grid">
         </div>
     </div>
+    
+    <div class="return">
+        <div class="button">
+            <a href="homepage.html">Return to Homepage</a>
+        </div>
+    </div>
+
     <script src="js/easy.js"></script>
 </body>
