--- a/hard.html
+++ b/hard.html
@@ -13,5 +13,12 @@
         <div class="grid">
         </div>
     </div>
+
+    <div class="return">
+        <div class="button">
+            <a href="homepage.html">Return to Homepage</a>
+        </div>
+    </div>
+    
     <script src="js/hard.js"></script>
 </body>
