--- a/intermediate.html
+++ b/intermediate.html
@@ -3,15 +3,31 @@
 <head>
     <title>Wordle - Intermediate</title>
     <link rel="stylesheet" href="css/intermediate.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
     <div id="title">
         <h1>WORDLE - INERTMEDIATE</h1>
     </div>
+    
     <div id="game">
         <div class="grid">
         </div>
     </div>
+
+    <div class="return">
+        <div class="button">
+            <a href="homepage.html">Return to Homepage</a>
+        </div>
+    </div>
+   
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
+
     <script src="js/intermediate.js"></script>
 </body>
