--- a/signin.html
+++ b/signin.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+
+    <title>Wordle - Sign In</title>
     <link rel="stylesheet" href="css/signin.css">
 
     <title>Sign In - Wordle</title>
@@ -12,6 +14,7 @@
 <body>
     <div class="title">
         <h1>Worlde - Final Project</h1>
+        <p>Vince Langner - vlangner@usca.edu</p>
     </div>  
     
     <div class="signUp">
